@@ -1,20 +1,19 @@
 package io.devfactory.jobs.inactive;
 
-import static java.util.stream.Collectors.toList;
-
 import io.devfactory.domain.Member;
 import io.devfactory.domain.enums.Status;
 import io.devfactory.repository.MemberRepository;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.util.Date;
-import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.batch.core.StepContribution;
 import org.springframework.batch.core.scope.context.ChunkContext;
 import org.springframework.batch.core.step.tasklet.Tasklet;
 import org.springframework.batch.repeat.RepeatStatus;
 import org.springframework.stereotype.Component;
+
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.util.Date;
+import java.util.List;
 
 @RequiredArgsConstructor
 @Component
@@ -34,7 +33,7 @@ public class InactiveMemberTasklet implements Tasklet {
     // processor
     final List<Member> inactiveMembers = activeMembers.stream()
       .map(Member::setInactive)
-      .collect(toList());
+      .toList();
 
     // writer
     memberRepository.saveAll(inactiveMembers);
